@@ -266,6 +266,11 @@ STATEMENT_SELECT_RECENT_CHANGES = \
     where virtual_wiki_name = ? \
     order by edit_date desc \
     limit ?
+STATEMENT_SELECT_RECENT_CHANGES_TOPIC = \
+    select * from jam_recent_change \
+    where topic_id = ? \
+    order by edit_date desc \
+    limit ?
 STATEMENT_SELECT_TOPIC = \
     select * from jam_topic \
     where virtual_wiki_id = ? \
